package com.y4vra.irboardbackend.domain.model;

import com.y4vra.irboardbackend.domain.errors.DeactivatedEntityException;
import com.y4vra.irboardbackend.domain.model.enums.EntityState;
import com.y4vra.irboardbackend.domain.model.interfaces.ProjectElement;
import jakarta.persistence.*;

import java.util.HashSet;
import java.util.Objects;
import java.util.Set;

@Entity
public class Document extends ProjectElement {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @Column(nullable = false)
    private String fileName;

    @Column(nullable = false)
    private String mimeType;

    @Column(nullable = false, unique = true)
    private String s3Key;

    private Long fileSize;

    @Enumerated(EnumType.STRING)
    private EntityState state;

    @ManyToMany()
    @JoinTable(
            name = "document_observer_requirement",
            joinColumns = @JoinColumn(name = "document_id"),
            inverseJoinColumns = @JoinColumn(name = "requirement_id")
    )
    private Set<Requirement> observerRequirements = new HashSet<>();

    public void notifyObservers() {
        observerRequirements.forEach(Requirement::update);
    }

    public void checkCanBeModified() {
        if (state.equals(EntityState.DEACTIVATED)){
            throw new DeactivatedEntityException("The document is deactivated and cannot be modified");
        } else if (state.equals(EntityState.REMOVED)){
            throw new DeactivatedEntityException("The document is removed and cannot be modified");
        }
    }

    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }

    public String getFileName() { return fileName; }
    public void setFileName(String fileName) { this.fileName = fileName; }

    public String getMimeType() { return mimeType; }
    public void setMimeType(String mimeType) { this.mimeType = mimeType; }

    public String getS3Key() { return s3Key; }
    public void setS3Key(String s3Key) { this.s3Key = s3Key; }

    public Long getFileSize() { return fileSize; }
    public void setFileSize(Long fileSize) { this.fileSize = fileSize; }

    public EntityState getState() { return state; }
    public void setState(EntityState state) { this.state = state; }

    public Set<Requirement> getObserverRequirements() { return Set.copyOf(observerRequirements); }
    protected Set<Requirement> _getObserverRequirements() { return observerRequirements; }

    @Override
    public boolean equals(Object o) {
        if (o == null || getClass() != o.getClass()) return false;
        Document document = (Document) o;
        return Objects.equals(id, document.id);
    }

    @Override
    public int hashCode() {
        return Objects.hash(id, project);
    }
}