package com.y4vra.irboardbackend.domain.model;

import com.y4vra.irboardbackend.domain.model.interfaces.Lockable;
import com.y4vra.irboardbackend.domain.model.interfaces.ProjectIndependentElement;
import jakarta.persistence.*;

import java.util.Objects;

@Entity
@Table(name = "app_user") // "user" is a reserved word in SQL
public class User extends ProjectIndependentElement {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;
    @Column(name = "ory_id", unique = true, nullable = false)
    private String oryId;

    @Column(unique = true, nullable = false)
    private String email;
    @Column(unique = true, nullable = false)
    private String name;
    private String surname;

    @Column(nullable = false)
    private Boolean active=true;
    @Column(nullable = false)
    private Boolean isAdmin=false;

    private String pendingActivationToken;
    
    public Long getId() { return id; }
    public void setId(Long id) { this.id = id; }
    public String getOryId() { return oryId; }
    public void setOryId(String oryId) { this.oryId = oryId; }

    public String getEmail() { return email; }
    public void setEmail(String email) { this.email = email; }

    public String getName() { return name; }
    public void setName(String name) { this.name = name; }

    public String getSurname() { return surname; }
    public void setSurname(String surname) { this.surname = surname; }

    public void setActive(Boolean active) { this.active = active; }
    public Boolean getActive() { return active; }

    public void setIsAdmin(Boolean isAdmin) { this.isAdmin = isAdmin; }
    public Boolean getIsAdmin() { return isAdmin; }

    public String getPendingActivationToken() { return pendingActivationToken; }
    public void setPendingActivationToken(String pendingActivationToken) { this.pendingActivationToken = pendingActivationToken; }

    @Override
    public boolean equals(Object o) {
        if (o == null || getClass() != o.getClass()) return false;
        User user = (User) o;
        return Objects.equals(id, user.id) && Objects.equals(oryId, user.oryId);
    }

    @Override
    public int hashCode() {
        return Objects.hash(id, oryId);
    }
}